--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@import "~stream-chat-react/dist/css/v2/index.css";
+
+.str-chat {
+  --str-chat__primary_color: theme(colors.blue.500);
+  --str-chat__active-primary-color: theme(colors.blue.600);
+  --str-chat__disabled-color: theme(colors.blue.200);
+  --str-chat__cta-button-border-radius: theme(borderRadius.DEFAULT);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.str-chat * {
+  font-family: inherit !important;
 }
